ecmascript/parser/tests/test262-error-references/fail/320eade064b2c635.js.stderr
error: Generator cannot be labelled
 --> $DIR/tests/test262-parser/fail/320eade064b2c635.js:1:4
  |
1 | a: function* a(){}
  |    ^^^^^^^^^^^^^^^

